proyecto-final/web-server/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: web-deploy
  namespace: public
  labels:
    app: web-server

spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
  selector:
    matchLabels:
      app: web-server

  template:
    metadata:
      labels:
        app: web-server
    spec:
      containers:
        - name: web-server
          image: cachac/kubelabs_webapp:1.1.7
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 100m
              memory: 100Mi
            requests:
              cpu: 10m
              memory: 50Mi

          volumeMounts:
            - name: web-config-volume
              mountPath: /usr/share/nginx/html/config.js
              subPath: config.js
      volumes:
        - name: web-config-volume
          configMap:
            name: web-configmap
